# ndk-example

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/iredbyte/ndk_example/: ExampleInstrumentedTest.kt  MappingTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/iredbyte/ndk_example/: MainActivity.kt  mapper.kt
app/src/main/java/com/github/iredbyte/ndk_example/ndkman/keyvalue/: NdkManActivity.kt  StoreType.kt
app/src/main/java/com/github/iredbyte/ndk_example/storage/: PowerOfStroustrup.kt  Stepik.java
app/src/main/jni/: CMakeLists.txt  com_github_iredbyte_ndk_example_ndkman_storage_NdkMan.h  com_github_iredbyte_ndk_example_stepik_storage_Stepik.h  com_github_iredbyte_ndk_example_storage_Stepik.h  hellojni.c  hellojni.cpp  helloneon.c  markov.cpp  markov.h  stepik.cpp  stepik_part1.cpp  utils.h
app/src/main/jni/markov/: markov.cpp
app/src/main/jni/ndkman/: Store.cpp  Store.h
app/src/main/jni/stepik/: README.md  stepik_part1.cpp  stepik_part2.cpp
app/src/main/jni/stepik/info/: Tasks.md  tasks.md
app/src/main/res/drawable/: button.xml  ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml  activity_ndk_man.xml  activity_stepik.xml  fragment_stepik_part1.xml  fragment_stepik_part2.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/iredbyte/ndk_example/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
